fluxcd/apps/production/geraldwu/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-service-geraldwu
  namespace: geraldwu
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: landing
